--- a/src/sass/_single-task.scss
+++ b/src/sass/_single-task.scss
@@ -20,4 +20,17 @@
             cursor: pointer;
         }
     }
+
+    &__form {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        input {
+            font-size: 1rem;
+            padding: .2rem;
+            color: $gray;
+        }
+    }
 }
